apps/api-control-plane/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-control-plane
  namespace: api-control-plane
  annotations:
    konghq.com/response-buffering: "false"
spec:
  ingressClassName: kong
  rules:
    - host: api.algovn.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-control-plane
                port: { number: 80 }
  tls:
    - hosts: [api.algovn.com]
